--- a/app/templates/src/scss/main.scss
+++ b/app/templates/src/scss/main.scss
@@ -1,2 +1,8 @@
 @import "../bower_components/arsenal.scss/src/scss/arsenal";
 @import "../bower_components/twelve/src/twelve";
+
+
+body {
+  background: $blue;
+  color: $offwhite;
+}
